--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/a4a77e78f7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -29,6 +30,7 @@
     <section id="banner">
         <div class="container column">
             <div class="banner_headline">
+                
                 <h1>Negócio geral</h1>
                 <h2>ESCREVA AQUI UM SLOGAN EMPRESARIAL</h2>
             </div>
@@ -36,8 +38,52 @@
     </section>
     <section>
         <article>
-            
+            <!--<i class="fa-solid fa-arrow-pointer"></i>-->
+            <div class="box">
+                <div class="boxint">
+                    <div class="caixinha1 caixa">
+                        <ion-icon name="navigate-outline"></ion-icon>
+                        <div class="texto">
+                            <h2>Primeiro serviço</h2>
+                            <h3>TOTAM REM APERIAM</h3>
+                            <p>Aqui é onde o seu texto começa. Basta clicar e começar a escrever. Porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur adipisci.</p>
+                        </div>
+                    </div>
+                    <div class="caixinha2 caixa">
+                        <ion-icon name="share-social-outline"></ion-icon>
+                        <div class="texto">
+                            <h2>Segundo serviço</h2>
+                            <h3>ILLUM QUI DOLOREM</h3>
+                            <p>Aqui é onde o seu texto começa. Basta clicar e começar a escrever. Voluptate velit esse quam nihil molestiae consequatur vel illum qui dolorem.</p>
+                        </div>
+                    </div>
+                    <div class="caixinha3 caixa">
+                        <ion-icon name="people-outline"></ion-icon>
+                        <div class="texto">
+                            <h2>Terceiro serviço</h2>
+                            <h3>LAUDANTIUM TOTAM REM</h3>
+                            <p>Aqui é onde o seu texto começa. Basta clicar e começar a escrever. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem ut enim.</p>
+                        </div>
+                    </div>
+                    <div class="caixinha4 caixa">
+                        <ion-icon name="layers-outline"></ion-icon>
+                        <div class="texto">
+                            <h2>Quarto serviço</h2>
+                            <h3>INVENTORE VERITATIS ET QUASI</h3>
+                            <p>Aqui é onde o seu texto começa. Basta clicar e começar a escrever. Rerum facilis est et expedita distinctio nam libero tempore cum soluta.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </article>
     </section>
+    <div class="nada"></div>
+    <footer>
+        <div class="coded">
+            Desenvolvido por TESTE11
+        </div>
+    </footer>
+<script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
