atualizacao inicio. sobre nos 1.0

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TESTE11</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/a4a77e78f7.js" crossorigin="anonymous"></script>
 </head>
@@ -20,7 +20,7 @@
                         <li class="active"><a href="">INÍCIO</a></li>
                         <li><a href="">NOSSOS SERVIÇOS</a></li>
                         <li><a href="">NOSSO PESSOAL</a></li>
-                        <li><a href="">SOBRE NÓS</a></li>
+                        <li><a href="sobre.html">SOBRE NÓS</a></li>
                         <li><a href="">CONTATO</a></li>
                     </ul>
                 </nav>
