--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li class="active"><a href="">INÍCIO</a></li>
                         <li><a href="">NOSSOS SERVIÇOS</a></li>
-                        <li><a href="">NOSSO PESSOAL</a></li>
+                        <li><a href="pessoal.html">NOSSO PESSOAL</a></li>
                         <li><a href="sobre.html">SOBRE NÓS</a></li>
                         <li><a href="">CONTATO</a></li>
                     </ul>
