--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li><a href="index.html">INÍCIO</a></li>
                         <li><a href="">NOSSOS SERVIÇOS</a></li>
-                        <li><a href="">NOSSO PESSOAL</a></li>
+                        <li><a href="sobre.html">NOSSO PESSOAL</a></li>
                         <li class="active"><a href="">SOBRE NÓS</a></li>
                         <li><a href="">CONTATO</a></li>
                     </ul>
@@ -54,3 +54,5 @@
             Desenvolvido por TESTE11
         </div>
     </footer>
+</body>
+</html>
