--- a/sobre.html
+++ b/sobre.html
@@ -19,9 +19,9 @@
                     <ul>
                         <li><a href="index.html">INÍCIO</a></li>
                         <li><a href="">NOSSOS SERVIÇOS</a></li>
-                        <li><a href="sobre.html">NOSSO PESSOAL</a></li>
-                        <li class="active"><a href="">SOBRE NÓS</a></li>
-                        <li><a href="">CONTATO</a></li>
+                        <li><a href="pessoal.html">NOSSO PESSOAL</a></li>
+                        <li class="active"><a href="sobre.html">SOBRE NÓS</a></li>
+                        <li><a href="contato.html">CONTATO</a></li>
                     </ul>
                 </nav>
             </div>
