--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="">NOSSOS SERVIÇOS</a></li>
                         <li><a href="pessoal.html">NOSSO PESSOAL</a></li>
                         <li><a href="sobre.html">SOBRE NÓS</a></li>
-                        <li><a href="">CONTATO</a></li>
+                        <li><a href="contato.html">CONTATO</a></li>
                     </ul>
                 </nav>
             </div>
