--- a/pessoal.html
+++ b/pessoal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TESTE11</title>
     <link rel="stylesheet" href="assets/css/pessoal.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
                         <li><a href="">NOSSOS SERVIÇOS</a></li>
                         <li class="active"><a href="pessoal.html">NOSSO PESSOAL</a></li>
                         <li><a href="sobre.html">SOBRE NÓS</a></li>
-                        <li><a href="">CONTATO</a></li>
+                        <li><a href="contato.html">CONTATO</a></li>
                     </ul>
                 </nav>
             </div>
