arrumando o link do A

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li class="active"><a href="">INÍCIO</a></li>
+                        <li class="active"><a href="index.html">INÍCIO</a></li>
                         <li><a href="">NOSSOS SERVIÇOS</a></li>
                         <li><a href="pessoal.html">NOSSO PESSOAL</a></li>
                         <li><a href="sobre.html">SOBRE NÓS</a></li>
