--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="">INÍCIO</a></li>
+                        <li><a href="index.html">INÍCIO</a></li>
                         <li><a href="">NOSSOS SERVIÇOS</a></li>
                         <li><a href="pessoal.html">NOSSO PESSOAL</a></li>
                         <li><a href="sobre.html">SOBRE NÓS</a></li>
