add do suporte ao layout

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <li><a href="pessoal.html">NOSSO PESSOAL</a></li>
                         <li><a href="sobre.html">SOBRE NÓS</a></li>
                         <li><a href="contato.html">CONTATO</a></li>
+                        <li class="suporte"><a href="login.html">SUPORTE</a></li>
                     </ul>
                 </nav>
             </div>
