--- a/contato.html
+++ b/contato.html
@@ -63,7 +63,7 @@
                                 <ion-icon name="location-outline"></ion-icon>
                                 <div class="texto2">
                                     <h2>TESTE11</h2>
-                                    <p>Avenida Pasteur 520, Rio de Janeiro 04719-001</p>
+                                    <p>Avenida Pasteur 520, Rio de Janeiro <br>04719-001</p>
                                 </div>
                             </div>
                             <div class="texto texto2">
